--- a/SP23-P03-Mobile/package.json
+++ b/SP23-P03-Mobile/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.6",
     "expo": "^48.0.6",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
