--- a/SP23.P03.Web/ClientApp/package.json
+++ b/SP23.P03.Web/ClientApp/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
     "bootstrap": "^5.3.0-alpha1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
@@ -16,7 +17,7 @@
   },
   "scripts": {
     "preinstall": "node aspnetcore-react",
-    "start": "react-scripts start",
+    "start": "set PORT=7031 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
