Navbar changes: replace search bar with route to trip booking

--- a/SP23.P03.Web/ClientApp/package.json
+++ b/SP23.P03.Web/ClientApp/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "preinstall": "node aspnetcore-react",
-    "start": "set PORT=7031 && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
