--- a/SP23-P03-Mobile/package.json
+++ b/SP23-P03-Mobile/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "set EXPO_PACKAGER_PROXY_URL=http://9970-147-174-75-101.ngrok.io && expo start",
+    "start": "set EXPO_PACKAGER_PROXY_URL=http://5f3d-2600-1702-3a50-2990-4cb7-921e-3009-ee34.ngrok.io && expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
